* Fix 'respec' events to no longer remove item-based powers from the action bar.
* Fix log message when gaining more than one level at once.
* Fixed excessive memory usage when using Items, ItemSets, and Powers with high-value IDs.
* Fix bug where power upgrades that didn't require power points would not automatically upgrade if other requirements were met.

Game updates:

* New graphics for HP and MP status bars
* Reworked art for the Cleave power
* Cleave power radius reduced to closer match its artwork
* Reduced the strength and radius of Rakk's freeze attack
* Fixed the Goblin Thief being able to steal potions from a Summoned Zombie
* Reduced the hitbox for spike traps
* Greatly reduced the damage for spike traps in the Underworld. In exchange, the traps now inflict bleeding.
* Overall reduced drop rates for alchemy items
* Added animations for immunity and ice-based slow status effects
* Redesigned the Torture Chambers map and quest (again)

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* Catalan (ca) update (Maria Cano)
* German (de) update (Wuzzy2)
* Spanish (es) update (Agustin Ferrario)
* Basque (eu) by aitzkora
* French (fr) update (leø, Christophe Nemo)
* Scottish Gaelic (gd) update (GunChleoc)
* Hungarian (hu) update (litoll)
* Korean (ko) by Kor_OfenTHource (team members: bnk159hair, kangdonghun1230, HunSeongPark and paparad0x)
* Norwegian (nb) update (Elias Nykrem)
* Polish (pl) update (Błażej Pęksyk)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Igor Polyakov)
* Slovak (sk) update (MiroslavR)
* Ukranian (uk) update (Sergiy Borodych)
* Vietnamese (vi) update (Nguyễn Gia Phong)
* Chinese (zh) update (dumaosen, sakura09123)



Flare v1.11 (http://flarerpg.org/index.php/2019/07/27/flare-1-11/)

Engine features:

* Players now have their own private stash in addition to the shared stash.
* Expanded the 'no_stash' Item variable to account for having multiple stashes.

Engine fixes:
